@@ -33,9 +33,17 @@ public:
 	void Log(const _eLogLevel level, const char* logline, ...);
 	void LogNoLF(const _eLogLevel level, const char* logline, ...);
 
+	void LogSequenceStart();
+	void LogSequenceAdd(const char* logline);
+	void LogSequenceAddNoLF(const char* logline);
+	void LogSequenceEnd(const _eLogLevel level);
+
 	std::list<_tLogLineStruct> GetLog();
 private:
+	boost::mutex m_mutex;
 	std::ofstream m_outputfile;
 	std::deque<_tLogLineStruct> m_lastlog;
+	bool m_bInSequenceMode;
+	std::stringstream m_sequencestring;
 };
 extern CLogger _log;
